@@ -49,6 +49,7 @@ import java.util.Properties;
 import java.util.Random;
 import java.util.Set;
 import java.util.TreeSet;
+import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BooleanSupplier;
@@ -122,6 +123,7 @@ import org.apache.hadoop.hbase.util.Bytes;
 import org.apache.hadoop.hbase.util.CommonFSUtils;
 import org.apache.hadoop.hbase.util.EnvironmentEdgeManager;
 import org.apache.hadoop.hbase.util.FSUtils;
+import org.apache.hadoop.hbase.util.JVM;
 import org.apache.hadoop.hbase.util.JVMClusterUtil;
 import org.apache.hadoop.hbase.util.JVMClusterUtil.MasterThread;
 import org.apache.hadoop.hbase.util.JVMClusterUtil.RegionServerThread;
@@ -149,9 +151,7 @@ import org.apache.yetus.audience.InterfaceStability;
 import org.apache.zookeeper.WatchedEvent;
 import org.apache.zookeeper.ZooKeeper;
 import org.apache.zookeeper.ZooKeeper.States;
-
 import org.apache.hbase.thirdparty.com.google.common.io.Closeables;
-
 import org.apache.hadoop.hbase.shaded.protobuf.ProtobufUtil;
 
 /**
@@ -1953,10 +1953,9 @@ public class HBaseTestingUtil extends HBaseZKTestingUtil {
 
   public void loadRandomRows(final Table t, final byte[] f, int rowSize, int totalRows)
     throws IOException {
-    Random r = new Random();
-    byte[] row = new byte[rowSize];
     for (int i = 0; i < totalRows; i++) {
-      r.nextBytes(row);
+      byte[] row = new byte[rowSize];
+      Bytes.random(row);
       Put put = new Put(row);
       put.addColumn(f, new byte[] { 0 }, new byte[] { 0 });
       t.put(put);
@@ -2322,6 +2321,14 @@ public class HBaseTestingUtil extends HBaseZKTestingUtil {
     conf.setBoolean("mapreduce.reduce.speculative", false);
     ////
 
+    // Yarn container runs in independent JVM. We need to pass the argument manually here if the
+    // JDK version >= 17. Otherwise, the MiniMRCluster will fail.
+    if (JVM.getJVMSpecVersion() >= 17) {
+      String jvmOpts = conf.get("yarn.app.mapreduce.am.command-opts", "");
+      conf.set("yarn.app.mapreduce.am.command-opts",
+        jvmOpts + " --add-opens java.base/java.lang=ALL-UNNAMED");
+    }
+
     // Allow the user to override FS URI for this map-reduce cluster to use.
     mrCluster =
       new MiniMRCluster(servers, FS_URI != null ? FS_URI : FileSystem.get(conf).getUri().toString(),
@@ -2684,7 +2691,7 @@ public class HBaseTestingUtil extends HBaseZKTestingUtil {
       // There are chances that before we get the region for the table from an RS the region may
       // be going for CLOSE. This may be because online schema change is enabled
       if (regCount > 0) {
-        idx = random.nextInt(regCount);
+        idx = ThreadLocalRandom.current().nextInt(regCount);
         // if we have just tried this region, there is no need to try again
         if (attempted.contains(idx)) {
           continue;
@@ -3288,7 +3295,7 @@ public class HBaseTestingUtil extends HBaseZKTestingUtil {
   }
 
   public static String randomMultiCastAddress() {
-    return "226.1.1." + random.nextInt(254);
+    return "226.1.1." + ThreadLocalRandom.current().nextInt(254);
   }
 
   public static void waitForHostPort(String host, int port) throws IOException {
